--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #FFFF;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -27,7 +27,11 @@
 .App-link {
   color: #61dafb;
 }
-
+.container-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
